@@ -1,3 +1,0 @@
-#Sat May 14 15:33:22 GMT+02:00 2005
-eclipse.preferences.version=1
-internal.default.compliance=user
