@@ -1,0 +1,82 @@
+Manifest-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-Name: TestNG plugin
+Bundle-SymbolicName: org.testng.eclipse; singleton:=true
+Bundle-Version: 5.7.1.qualifier
+Bundle-ClassPath: eclipse-testng.jar,
+ lib/testng-5.7.1beta-jdk14.jar,
+ lib/testng-5.7.1beta-jdk15.jar
+Bundle-Activator: org.testng.eclipse.TestNGPlugin
+Bundle-Vendor: StreamBase Systems Inc
+Bundle-Localization: plugin
+Export-Package: bsh,
+ bsh.classpath,
+ bsh.collection,
+ bsh.commands,
+ bsh.org.objectweb.asm,
+ bsh.reflect,
+ bsh.servlet,
+ bsh.util,
+ bsh.util.lib,
+ com.beust.testng,
+ com.thoughtworks.qdox,
+ com.thoughtworks.qdox.directorywalker,
+ com.thoughtworks.qdox.model,
+ com.thoughtworks.qdox.model.util,
+ com.thoughtworks.qdox.parser,
+ com.thoughtworks.qdox.parser.impl,
+ com.thoughtworks.qdox.parser.structs,
+ edu.emory.mathcs.backport.java.util,
+ edu.emory.mathcs.backport.java.util.concurrent,
+ edu.emory.mathcs.backport.java.util.concurrent.atomic,
+ edu.emory.mathcs.backport.java.util.concurrent.helpers,
+ edu.emory.mathcs.backport.java.util.concurrent.locks,
+ org.testng,
+ org.testng.annotations,
+ org.testng.eclipse,
+ org.testng.eclipse.buildpath,
+ org.testng.eclipse.launch,
+ org.testng.eclipse.launch.components,
+ org.testng.eclipse.launch.tester,
+ org.testng.eclipse.properties,
+ org.testng.eclipse.ui,
+ org.testng.eclipse.ui.conversion,
+ org.testng.eclipse.ui.preferences,
+ org.testng.eclipse.ui.util,
+ org.testng.eclipse.util,
+ org.testng.eclipse.util.param,
+ org.testng.eclipse.util.signature,
+ org.testng.internal;x-internal:=true,
+ org.testng.internal.annotations;x-internal:=true,
+ org.testng.internal.remote;x-internal:=true,
+ org.testng.internal.thread;x-internal:=true,
+ org.testng.internal.thread.port;x-internal:=true,
+ org.testng.internal.version;x-internal:=true,
+ org.testng.junit,
+ org.testng.log,
+ org.testng.log4testng,
+ org.testng.remote,
+ org.testng.remote.adapter,
+ org.testng.remote.strprotocol,
+ org.testng.reporters,
+ org.testng.reporters.util,
+ org.testng.util,
+ org.testng.xml
+Require-Bundle: org.eclipse.core.expressions,
+ org.eclipse.core.resources,
+ org.eclipse.core.runtime,
+ org.eclipse.compare,
+ org.eclipse.debug.core,
+ org.eclipse.debug.ui,
+ org.eclipse.jface,
+ org.eclipse.jface.text,
+ org.eclipse.jdt.core,
+ org.eclipse.jdt.debug.ui,
+ org.eclipse.jdt.junit,
+ org.eclipse.jdt.ui,
+ org.eclipse.ui,
+ org.eclipse.ui.ide,
+ org.eclipse.ui.workbench.texteditor,
+ org.eclipse.search,
+ org.eclipse.jdt.launching
+Eclipse-LazyStart: true
