@@ -3,10 +3,18 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                eclipse-testng.jar,\
                schema/,\
-               lib/testng-jdk14.jar,\
-               lib/testng-jdk15.jar
+               lib/testng-jdk15.jar,\
+               lib/testng-5.7.1beta-jdk14.jar,\
+               lib/testng-5.7.1beta-jdk15.jar,\
+               META-INF/
 
-src.includes = schema/
+src.includes = .settings/,\
+               README.txt,\
+               build.properties,\
+               build.xml,\
+               javaCompiler.eclipse-testng.jar.args,\
+               .classpath,\
+               .project
 
 source.eclipse-testng.jar = src/main
 jars.compile.order = eclipse-testng.jar
